--- a/school/templates/dashboard.html
+++ b/school/templates/dashboard.html
@@ -42,7 +42,7 @@
                     <i class="fas fa-book"></i>
                 </div>
                 <h5 class="fw-semibold card-title">Subjects</h5>
-                <p class="display-5 fw-bold text-danger">{{ total_subjects }}</p>
+                <p class="display-5 fw-bold text-danger">{{ total_subject }}</p>
             </div>
         </div>
     </div>
