--- a/school/templates/enter_marks.html
+++ b/school/templates/enter_marks.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-4 align-self-end">
-                <button type="submit" class="btn btn-primary btn-custom animate-button w-100">
+                <button type="submit" class="btn btn-primary btn-custom animate-button w-100" onclick="showLoading(event)">
                     <i class="fas fa-search me-2"></i> Load Students & Subjects
                 </button>
             </div>
