--- a/school/templates/reports.html
+++ b/school/templates/reports.html
@@ -38,7 +38,7 @@
                 {% endfor %}
             </div>
             <div class="d-flex justify-content-end mt-5">
-                <button type="submit" class="btn btn-gradient btn-lg animate-button">
+                <button type="submit" class="btn btn-gradient btn-lg animate-button" onclick="showLoading(event)">
                     <i class="fas fa-chart-bar me-2"></i> Generate Reports
                 </button>
             </div>
