--- a/school/templates/reports_list.html
+++ b/school/templates/reports_list.html
@@ -9,11 +9,13 @@
 
 <div class="card shadow-sm border-0 rounded-4 p-4 animate-card">
     <div class="card-body">
+        {% comment %}
         <div class="d-flex justify-content-end mb-4">
-            <a href="{% url 'report_pdf_class' classroom.id term.id %}" class="btn btn-primary btn-custom animate-button">
+            <a href="{% url 'report_pdf_class' classroom.id term.id %}" class="btn btn-primary btn-custom animate-button"onclick="showLoading(event)">
                 <i class="fas fa-file-pdf me-2"></i> Download Class PDF
             </a>
         </div>
+        {% endcomment %}
 
         <div class="table-responsive">
             <table class="table table-striped table-hover">
@@ -38,7 +40,7 @@
                         <td class="text-center align-middle">{{ r.average|floatformat:2 }}</td>
                         <td class="text-center align-middle">{{ r.grade }}</td>
                         <td class="text-center align-middle">
-                            <a class="btn btn-sm btn-outline-secondary btn-custom-small"
+                            <a class="btn btn-sm btn-outline-secondary btn-custom-small" onclick="showLoading(event)"
                                href="{% url 'report_pdf_student' classroom.id term.id r.student.id %}">
                                 <i class="fas fa-file-download me-1"></i> PDF
                             </a>
