--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -366,7 +366,7 @@
     <nav class="navbar navbar-custom">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <a class="navbar-brand" href="{% url 'dashboard' %}">
-                <i class="fas fa-graduation-cap"></i> SIDAY PRI & PRIMARY SCHOOL
+                <i class="fas fa-graduation-cap"></i> SIDAY PRE & PRIMARY SCHOOL
             </a>
             <div class="navbar-links d-flex align-items-center">
                 <a href="{% url 'dashboard' %}">Home</a>
@@ -434,7 +434,7 @@
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>&copy; {{ now|date:"Y" }} SIDAY PRI & PRIMARY SCHOOLL. Committed to Academic Excellence.</p>
+            <p>&copy; {{ now|date:"Y" }} SIDAY PRE & PRIMARY SCHOOLL. Committed to Academic Excellence.</p>
         </div>
     </footer>
 
