--- a/school/templates/students_list.html
+++ b/school/templates/students_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="mb-5 text-center">
     <h3 class="fw-bold display-5 animate-header text-gradient">Students</h3>
-    <p class="text-primary fs-5 animate-subheader">Manage and view student details for SIDAY PRI & PRIMARY SCHOOL.</p>
+    <p class="text-primary fs-5 animate-subheader">Manage and view student details for SIDAY PRE & PRIMARY SCHOOL.</p>
 </div>
 
 <div class="card shadow border-0 rounded-4 overflow-hidden animate-card">
