--- a/school/templates/subjects_list.html
+++ b/school/templates/subjects_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="mb-5">
     <h3 class="fw-bold display-5 animate-header">Subjects</h3>
-    <p class="text-primary fs-5 animate-subheader">Manage and view subject details for SIDAY PRI & PRIMARY SCHOOL</p>
+    <p class="text-primary fs-5 animate-subheader">Manage and view subject details for SIDAY PRE & PRIMARY SCHOOL</p>
 </div>
 
 <div class="card shadow-sm border-0 rounded-4 p-4 animate-card">
